selfhost/test/parser/indexing_error_eof.out
Error at %FILE_NAME%:1:12
Unexpected end of file:
  |  [1, 2, 3][1
                ^